--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -30,6 +30,7 @@
     <p>本文:<%= topic.content %></p>
   <%= link_to "編集", edit_topic_path(topic.id), class: 'btn btn-default btn-sm btn-success'  %>
   <%= link_to "削除", topic_path(topic.id), method: :delete, data: { confirm: '本当に削除していいですか？'}, class: 'btn btn-default btn-sm btn btn-danger' %>
+  <%= topic.user.name %>
   </div>
   <% end %>
 </main>
