--- a/app/views/topics/_form.html.erb
+++ b/app/views/topics/_form.html.erb
@@ -2,17 +2,7 @@
 
 
 <%= form_for(@topic) do |f| %>
-  <% if @topic.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= @topic.errors.count %>件のエラーがあります。</h2>
-
-      <ul>
-      <% @topic.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <%= f.error_messages! %>
 
   <%= f.label :タイトル %>
   <%= f.text_field :title, class: 'form-control' %>
