--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,7 +3,7 @@
 
 <h2><%= resource_name.to_s.humanize %>編集</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= f.error_messages! %>
 
   <div class="field">
@@ -15,6 +15,7 @@
     <%= f.label :名前 %><br />
     <%= f.text_field :name, class: "form-control" %>
   </div>
+  <% if @user.provider.blank? %>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
@@ -29,6 +30,8 @@
     <% end %>
   </div>
 
+
+
   <div class="field">
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
@@ -38,6 +41,14 @@
     <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
     <%= f.password_field :current_password, autocomplete: "off" %>
   </div>
+
+  <% end %>
+
+  <div class="field">
+   <%= profile_img(@user) if profile_img(@user) %>
+   <%= f.file_field :avatar %>
+   <%= f.hidden_field :avatar_cache %>
+ </div>
 
   <div class="actions">
     <%= f.submit "アップデート", class: "btn btn-primary btn-block" %>
