--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,2 +1,50 @@
-<h1>Topics#index</h1>
-<p>Find me in app/views/topics/index.html.erb</p>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <title>facebook</title>
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+<header>
+  <li><a href="#">facebook</a></li>
+  <li><a href="topics/new">投稿</a></li>
+  <% if user_signed_in? %>
+  <li><%= link_to 'マイページ', edit_user_registration_path %></li>
+  <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></li>
+<% else %>
+  <li><%= link_to 'ログイン', new_user_session_path  %></li>
+  <li><%= link_to 'サインアップ', new_user_registration_path %></li>
+<% end %>
+</header>
+<main>
+
+
+  <p class="flash"><%= notice %><%= alert %></p>
+  <h3>投稿一覧</h3>
+  <% @topics.each do |topic| %>
+  <div class="main-status">
+    <%= link_to topic_path(topic) do %>
+    <p>タイトル:<%= topic.title %></p>
+    <% end %>
+    <p>本文:<%= topic.content %></p>
+  <%= link_to "編集", edit_topic_path(topic.id), class: 'btn btn-default btn-sm btn-success'  %>
+  <%= link_to "削除", topic_path(topic.id), method: :delete, data: { confirm: '本当に削除していいですか？'}, class: 'btn btn-default btn-sm btn btn-danger' %>
+  <%= topic.user.name %>
+  </div>
+  <% end %>
+</main>
+
+
+
+
+
+
+
+
+
+
+
+</boby>
