change storage to fog from file

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -28,6 +28,10 @@
     <%= f.text_field :user_id, value: current_user.id, type: "hidden"  %>
   <div>
     <%= f.submit "メッセージを送る" %>
+    <%= link_to "ユーザー一覧にもどる", users_path %>
+
   </div>
+
+
 
 <% end %>
