--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,5 +7,7 @@
         <%= user.email %>
         <%= render 'follow_form', user: user %>
       </div>
-  <% end %>
+　<% end %>
+<%= link_to "一覧画面にもどる", root_path %>
+
 </div>
